<resources>
    <string name="app_name">Weather app</string>
    <string name="get_current_location_button">Get Current Location</string>
    <string name="click_on_button_to_get_current_location_output">Click button above for current location.\n(Results will show below.)</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>

    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied but is needed for core functionality.</string>
    <string name="permission_approved_explanation">You approved FINE location, carry (and click) on!</string>
    <string name="enable_gps">You should enable youre GPS</string>
    <string name="min">min</string>
    <string name="current">Current</string>
    <string name="max">max</string>
    <string name="locations">Locations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_favourite_place_please_add_some_by_touche_button">No Favourite place. Please add some by touche + button</string>
    <string name="favourites">Favourites</string>
    <string name="delete_item">Do you want to delete this item?</string>
</resources>