<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/locations"
            android:minHeight="?attr/actionBarSize"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/favourites"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/locations"
            android:minHeight="?attr/actionBarSize"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_place_black_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/locations"
            android:minHeight="?attr/actionBarSize"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_add_black_24dp" />

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:gravity="center"
        android:layout_margin="50dp"
        android:id="@+id/nofavourite"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:text="@string/no_favourite_place_please_add_some_by_touche_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/toolbar"
        android:visibility="gone"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/favourite_item" />


</RelativeLayout>