<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_alignParentTop="true"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/currentBigImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:minHeight="220dp"
                android:scaleType="fitXY"
                tools:src="@drawable/forest_cloudy" />

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/sunny">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/locations"
                    android:minHeight="?attr/actionBarSize"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/locations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/locations"
                    android:minHeight="?attr/actionBarSize"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_location_city_white_24dp" />


            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/currentTempBig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="80dp"
                    tools:layout_conversion_absoluteWidth="69dp"
                    tools:text="25" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/currentWeatherType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currentTempBig"
                    tools:layout_conversion_absoluteHeight="53dp"
                    tools:layout_conversion_absoluteWidth="130dp"
                    tools:text="SUNNY" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/currentTempDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/currentBigImage"
                android:baselineAligned="false"
                android:weightSum="3"
                tools:background="@color/sunny">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/minTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/appCompatTextView4"
                    app:layout_constraintEnd_toStartOf="@+id/currentTemp"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="19" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/min"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatTextView5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/currentTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/appCompatTextView5"
                    app:layout_constraintEnd_toStartOf="@+id/maxTemp"
                    app:layout_constraintStart_toEndOf="@+id/minTemp"
                    tools:text="19" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatTextView6"
                    app:layout_constraintStart_toEndOf="@+id/appCompatTextView4" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/maxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/appCompatTextView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/currentTemp"
                    tools:text="19" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/max"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/appCompatTextView5" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/currentTempDetail"
                android:layout_marginTop="5dp"
                android:background="@android:color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecasts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/separator"
                tools:listitem="@layout/forecast_item" />




        </RelativeLayout>

    </ScrollView>
</RelativeLayout>


